[package]
name = "registrobr-finder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
futures = "0.3"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
